# lowerdict.py

./: README.md  setup.cfg
