# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = lowerdict
version = 2019.02.28
url = https://github.com/looking-for-a-job/lowerdict.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = dict

[options]
install_requires = 
	public
	setuptools
packages = 
	lowerdict
